# gym-mcp

./: .gitignore  README.md  claude.json  claude_desktop_config.json  demo.py  main.py  pyproject.toml  simple_demo.py  test_fastmcp.py
mcp_games/: __init__.py
mcp_games/games/: registry.py
mcp_games/tools/: __init__.py
src/: main.py  server.py
src/games/: registry.py
