[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gym-mcp"
version = "0.1.0"
description = "MCP server for AI gaming - wraps games as tools"
authors = [{name = "MCP Games", email = "games@example.com"}]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcp-games = "mcp_games.server:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
